# CS32

./: .gitignore  README.md
Homework 1/: CMakeLists.txt  SSNSet.cpp  SSNSet.h  Set.cpp  Set.h  main.cpp  newSet.cpp  newSet.h  testSSNSet.cpp  testSet.cpp  testnewSet.cpp
Homework 2/: CMakeLists.txt  Set.cpp  Set.h  eval.cpp  hw.txt  mazequeue.cpp  mazestack.cpp
Homework 3/: CMakeLists.txt  Tests.txt  landmark.cpp  linear.cpp  maze.cpp  tree.cpp
Homework 4/: Set.cpp  Set.h  hw.txt  sorts.cpp
Homework 4/Project Files/: CMakeLists.txt  Set.h  hw.txt  list.cpp  sorts.cpp  testSet.cpp
Homework 5/: hw.txt
Project 1/ClubZombie/: Arena.cpp  Arena.h  CMakeLists.txt  Game.cpp  Game.h  History.cpp  History.h  Player.cpp  Player.h  Zombie.cpp  Zombie.h  globals.h  utilities.cpp
Project 2/: CMakeLists.txt  Set.cpp  Set.h  main.cpp  report.txt
Project 3/: CMakeLists.txt  report.txt
Project 3/Assets/: level01.txt  level02.txt
Project 3/ZombieDash/: Actor.cpp  Actor.h  CMakeLists.txt  GameController.cpp  SpriteManager.h  StudentWorld.cpp  StudentWorld.h  main.cpp
Project 4/Project Files/: CMakeLists.txt  Genome.cpp  GenomeMatcher.cpp  Trie.h  main.cpp  officialMain.cpp  report.txt
Project 4/data/: TestData.txt
